[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "Pytdbot"
dynamic = ["version"]
description = "Easy-to-use asynchronous TDLib wrapper for Python."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "AYMEN A", email = "let.me.code.safe@gmail.com" }]
dependencies = ["deepdiff"]
keywords = [
    "telegram",
    "tdlib",
    "bot",
    "telegram-client",
    "telegram-bot",
    "bot-api",
    "tdlib-python",
    "tdlib-bot",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries",
    "Topic :: Communications :: Chat",
]

[project.urls]
Source = "https://github.com/pytdbot/client"
Tracker = "https://github.com/pytdbot/client/issues"

[project.optional-dependencies]
tdjson = ["tdjson"]
nats = ["nats-py"]

[tool.setuptools.packages.find]
exclude = ["examples"]

[tool.setuptools.package-data]
pytdbot = ["td_api.*"]

[tool.setuptools.dynamic]
version = { attr = "pytdbot.__version__" }
